# Snake

./: .gitmodules  CMakeLists.txt  README.md  run.sh
.github/workflows/: ci.yml  rel.yml
src/: main.cpp
